--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -6,6 +6,7 @@
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
@@ -14,4 +15,8 @@
   </ion-header>
 
   <app-explore-container name="Tab 1 page"></app-explore-container>
+
+
+
+{{user.name}}
 </ion-content>
