--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,11 +7,82 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-content color="light">
+    <ion-list [inset]="true">
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <img src='assets/photo/tof13.jpg'>
+        </ion-thumbnail>
+        <ion-label>Cedric</ion-label>
+        <ion-badge slot="end">22</ion-badge>
+      </ion-item>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <img src='assets/photo/tof12.jpg'>
+        </ion-thumbnail>
+        <ion-label>Megan</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <img src='assets/photo/tof14.jpg'>
+        </ion-thumbnail>
+        <ion-label>Eric</ion-label>
+        <ion-badge slot="end">22</ion-badge>
+      </ion-item>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <img src='assets/photo/tof15.jpg'>
+        </ion-thumbnail>
+        <ion-label>Céline</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <img src='assets/photo/tof13.jpg'>
+        </ion-thumbnail>
+        <ion-label>Cedric</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <img src='assets/photo/tof12.jpg'>
+        </ion-thumbnail>
+        <ion-label>Megan</ion-label>
+        <ion-badge slot="end">22</ion-badge>
+      </ion-item>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <img src='assets/photo/tof14.jpg'>
+        </ion-thumbnail>
+        <ion-label>Eric</ion-label>
+        <ion-badge slot="end">22</ion-badge>
+      </ion-item>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <img src='assets/photo/tof15.jpg'>
+        </ion-thumbnail>
+        <ion-label>Céline</ion-label>
+      </ion-item>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+    </ion-list>
+  </ion-content>
+
+
+
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="tab1">
+        <ion-icon name="home"></ion-icon>
+        <ion-label>Home</ion-label>
+      </ion-tab-button>
+  
+      <ion-tab-button tab="tab2">
+        <ion-icon name="apps"></ion-icon>
+        <ion-label>Match</ion-label>
+      </ion-tab-button>
+  
+      <ion-tab-button tab="tab3">
+        <ion-icon name="person"></ion-icon>
+        <ion-label>Profile</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-content>
