--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -7,11 +7,70 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+
+  <div class="header">
+    <h2>Elon Musk</h2>
+    <div class="space-between">
+      <div class="followings">
+        <ion-badge color="primary" mode="ios">42</ion-badge>
+        <p>Match</p>
+      </div>
+      <div class="followings">
+        <ion-badge color="primary" mode="ios">42</ion-badge>
+        <p>Message</p>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="flex">
+    <div class="box-border">
+      <div class="border-white">
+        <div class="img-box">
+          <img src='assets/photo/tof13.jpg'>
+        </div>
+      </div>
+      <ion-fab-button>
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+    </div>
+  </div>
+
+
+
+  <ion-list>
+    <ion-item>
+      <ion-label>Prenom</ion-label>
+      <ion-input></ion-input>
+    </ion-item>
+  
+    <ion-item>
+      <ion-label>Nom</ion-label>
+      <ion-input></ion-input>
+    </ion-item>
+  
+    <ion-item>
+      <ion-label>Age</ion-label>
+      <ion-input ></ion-input>
+    </ion-item>
+  
+    <ion-item>
+      <ion-label>Ville</ion-label>
+      <ion-input></ion-input>
+    </ion-item>
+  
+    <ion-item>
+      <ion-label>Métier</ion-label>
+      <ion-input ></ion-input>
+    </ion-item>
+
+    
+  </ion-list>
+
+
+
 </ion-content>
+
+
+<ion-button (click)="presentAlert()">Supprimer le compte</ion-button>
