Ajout de la page Login

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -10,7 +10,7 @@
 
 
   <div class="header">
-    <h2>Elon Musk</h2>
+    <h2>Cedric</h2>
     <div class="space-between">
       <div class="followings">
         <ion-badge color="primary" mode="ios">42</ion-badge>
@@ -62,6 +62,11 @@
   
     <ion-item>
       <ion-label>Métier</ion-label>
+      <ion-input ></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Bio</ion-label>
       <ion-input ></ion-input>
     </ion-item>
 
