--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -95,7 +95,7 @@
   
       <ion-tab-button tab="tab3">
         <ion-icon name="person"></ion-icon>
-        <ion-label>Profile</ion-label>
+        <ion-label>Profil</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
