config profil correction

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -136,11 +136,11 @@
 
     <ion-button (click)="sauvegarderClicked()">Sauvegarder</ion-button>
 
-    <div id="resultDiv"></div>
+    <div id="result"></div>
 </ion-list>
-<div id="resultDiv"></div>
+<div id="result"></div>
 
-<div id="resultDiv" style="border: 1px solid red;"></div>
+<div id="result" style="border: 1px solid red;"></div>
 
 
 
