Ajout des modifications dans ma nouvelle branche

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -59,7 +59,7 @@
         <ion-thumbnail slot="start">
           <img src='assets/photo/tof15.jpg'>
         </ion-thumbnail>
-        <ion-label>Céline</ion-label>
+        <ion-label>Céline test</ion-label>
       </ion-item>
 
     </ion-list>
