--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -9,61 +9,18 @@
 <ion-content [fullscreen]="true">
   <ion-content color="light">
     <ion-list [inset]="true">
-      <ion-item>
-        <ion-thumbnail slot="start">
-          <img src='assets/photo/tof13.jpg'>
-        </ion-thumbnail>
-        <ion-label>Cedric</ion-label>
-        <ion-badge slot="end">22</ion-badge>
+      <ion-item *ngFor="let user of users">
+        <ion-avatar slot="start">
+          <img [src]="user.avatar">
+        </ion-avatar>
+        <ion-label>
+          {{ user.name }}
+          <p>{{ user.lastMessage }}</p>
+        </ion-label>
+        <ion-badge slot="end" [color]="user.online ? 'success' : 'danger'">{{ user.age }}</ion-badge>
       </ion-item>
-      <ion-item>
-        <ion-thumbnail slot="start">
-          <img src='assets/photo/tof12.jpg'>
-        </ion-thumbnail>
-        <ion-label>Megan</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-thumbnail slot="start">
-          <img src='assets/photo/tof14.jpg'>
-        </ion-thumbnail>
-        <ion-label>Eric</ion-label>
-        <ion-badge slot="end">22</ion-badge>
-      </ion-item>
-      <ion-item>
-        <ion-thumbnail slot="start">
-          <img src='assets/photo/tof15.jpg'>
-        </ion-thumbnail>
-        <ion-label>Céline</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-thumbnail slot="start">
-          <img src='assets/photo/tof13.jpg'>
-        </ion-thumbnail>
-        <ion-label>Cedric</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-thumbnail slot="start">
-          <img src='assets/photo/tof12.jpg'>
-        </ion-thumbnail>
-        <ion-label>Megan</ion-label>
-        <ion-badge slot="end">22</ion-badge>
-      </ion-item>
-      <ion-item>
-        <ion-thumbnail slot="start">
-          <img src='assets/photo/tof14.jpg'>
-        </ion-thumbnail>
-        <ion-label>Eric</ion-label>
-        <ion-badge slot="end">22</ion-badge>
-      </ion-item>
-      <ion-item>
-        <ion-thumbnail slot="start">
-          <img src='assets/photo/tof15.jpg'>
-        </ion-thumbnail>
-        <ion-label>Céline test</ion-label>
-      </ion-item>
-
     </ion-list>
-  </ion-content>
+
 
 
 
