--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -21,7 +21,12 @@
       </ion-item>
     </ion-list>
 
+    <ion-item>
+      <ion-input placeholder="Écrire un message"></ion-input>
+      <ion-button (click)="sendMessage()">Envoyer</ion-button>
+    </ion-item>
 
+    
 
 
   <ion-tabs>
