--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -16,7 +16,18 @@
 
   <app-explore-container name="Tab 1 page"></app-explore-container>
 
-
-
-{{user.name}}
+  <ion-content>
+    <ion-list>
+      <ion-item *ngFor="let user of users">
+        <ion-avatar slot="start">
+          <img [src]="user.image" alt="{{ user.name }}">
+        </ion-avatar>
+        <ion-label>
+          <h2>{{ user.name }}</h2>
+          <p>{{ user.bio }}</p>
+          <p>{{ user.age }} years old</p>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
 </ion-content>
