--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,5 @@
 
+
 <ion-menu contentId="main-content">
   <ion-header>
     <ion-toolbar>
@@ -15,17 +16,15 @@
 
 <div class="ion-page" id="main-content">
 
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" class="logo-header">
   <ion-toolbar>
-    <ion-title>
-      JobMatch
-    </ion-title>
+    <ion-img src="../../assets/photo/logo-official.png" class="logo"></ion-img>
   </ion-toolbar>
 </ion-header>
 
 
 
-<ion-content>
+<ion-content class="menu-with-green-background">
   <div class="users" *ngIf="users.length > 0; else emptyTemplate">
     <div class="user" *ngFor="let user of users;let i = index;" [style.zIndex]=" users.length - i" (touchstart)=" touchStart($event)" (touchmove)=" touchMove($event,i)" (touchend)=" toucheEnd(i)" id="{{'card-'+i}}">
 
@@ -48,17 +47,20 @@
         </ion-card-content>
       </ion-card>
 
-      <div class="navigation-buttons">
+      <!--<div class="navigation-buttons">
         <ion-button (click)="scrollLeft()">
           <ion-icon name="arrow-back"></ion-icon>
         </ion-button>
         <ion-button (click)="scrollRight()">
           <ion-icon name="arrow-forward"></ion-icon>
         </ion-button>
+
     
     
       </div>
-      
+      <ion-button (click)="scrollLeft()">Défiler à gauche</ion-button>
+      <ion-button (click)="scrollRight()">Défiler à droite</ion-button>
+      -->
       <!-- Icons -->
 
    <!--  <ion-icon name="heart-dislike" class="icon" color="danger" id="reject-icon"></ion-icon>
@@ -81,7 +83,7 @@
   </ng-template>
 
 
-  <ion-tabs>
+  <ion-tabs class="menu-tabs">
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="tab1">
         <ion-icon name="home"></ion-icon>
