--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -57,7 +57,7 @@
         border-radius: 16px;
         object-fit: cover;
         object-position: top;
-        mask-image: linear-gradient(to bottom, #000000, #000000, transparent);
+        mask-image: linear-gradient(to bottom, #ff0000, #d8cccc, transparent);
       }
 
 
@@ -127,4 +127,31 @@ center {
   display: flex;
   justify-content: space-between;
   width: 55%;
+}
+
+
+.menu-with-green-background {
+
+  --ion-background-color: linear-gradient(#6d19f5, #050c44);
+}
+
+
+ion-toolbar {
+
+  --background: url('../../assets/photo/colorviolet.jpg') 
+}
+
+.logo-header ion-toolbar {
+  text-align: center; /* Centre le contenu horizontalement */
+}
+
+.logo {
+  width: 100px; /* Largeur souhaitée en pixels */
+  height: auto; /* Laissez "auto" pour maintenir la proportion d'origine */
+  margin: 0 auto; /* Centre le logo horizontalement en utilisant des marges automatiques */
+}
+
+.menu-tabs {
+  --ion-background-color: linear-gradient(#6d19f5, #050c44);
+
 }
