--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,24 +1,33 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content >
+  <div class="padding">
+    
+    <div class="logo">
+      <ion-img src="../../assets/photo/logo-official.png" class="logo"></ion-img>
+    </div>
 
-<ion-content>
-  <form>
-    <ion-item lines="full">
-      <ion-label position="floating">Email</ion-label>
-      <ion-input type="text" required></ion-input>
+    <ion-item >
+      <ion-label color="light">Email</ion-label>
+      <ion-input color="light" type="mail" placeholder="Adresse email"></ion-input>
     </ion-item>
-    <ion-item lines="full">
-      <ion-label position="floating">Password</ion-label>
-      <ion-input type="password" required></ion-input>
+
+    <ion-item>
+      <ion-label color="light">Mot de passe</ion-label>
+      <ion-input color="light" type="password" placeholder="Mot de passe"></ion-input>
     </ion-item>
-    <ion-row>
-      <ion-col>
-        <ion-button type="submit" color="danger" expand="block">Sign In</ion-button>
-        <a [routerLink]="['/forgot-password']" class="small-text">Forgot Password?</a>
-      </ion-col>
-    </ion-row>
-  </form>
+
+    <ion-item lines="none">
+      <ion-button color="light" slot="end" fill="clear">Mot de passe oublié ?</ion-button>
+    </ion-item>
+
+    <ion-button (click)="goToTab1()" color="light" expand="block" shape="round" fill="outline">Connexion</ion-button>
+    <br>
+    <ion-button color="tertiary" expand="block" shape="round">Inscription</ion-button>
+
+
+
+
+    
+
+
+  </div>
 </ion-content>
