--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,12 +1,10 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-header [translucent]="true" class="logo-header">
+    <ion-toolbar>
+      <ion-img src="../../assets/photo/logo-official.png" class="logo"></ion-img>
+    </ion-toolbar>
+  </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="menu-with-green-background">
 
 
 
@@ -15,12 +13,12 @@
     <h2>Cedric</h2>
     <div class="space-between">
         <div class="followings">
-            <ion-badge color="primary" mode="ios">42</ion-badge>
-            <p>Match</p>
+            <ion-badge color="tertiary" mode="ios">42</ion-badge>
+            <p>Matchs</p>
         </div>
         <div class="followings">
-            <ion-badge color="primary" mode="ios">42</ion-badge>
-            <p>Message</p>
+            <ion-badge color="tertiary" mode="ios">42</ion-badge>
+            <p>Messages</p>
         </div>
     </div>
 </div>
@@ -29,54 +27,54 @@
     <div class="box-border">
         <div class="border-white">
             <div class="img-box">
-                <img src='assets/photo/tof13.jpg'>
+                <img src='assets/photo/lia.jpg'>
             </div>
         </div>
-        <ion-fab-button>
-            <ion-icon name="add"></ion-icon>
+        <ion-fab-button color="tertiary">
+            <ion-icon  name="add"></ion-icon>
         </ion-fab-button>
     </div>
 </div>
 
-<ion-list>
+<ion-list >
     <ion-item>
-        <ion-label>Prenom</ion-label>
-        <ion-input id="prenomInput"></ion-input>
+        <ion-label color="light">Prenom</ion-label>
+        <ion-input id="prenomInput" color="light"></ion-input>
     </ion-item>
 
     <ion-item>
-        <ion-label>Nom</ion-label>
-        <ion-input id="nomInput"></ion-input>
+        <ion-label color="light">Nom</ion-label>
+        <ion-input id="nomInput" color="light"></ion-input>
     </ion-item>
 
     <ion-item>
-        <ion-label>Age</ion-label>
-        <ion-input id="ageInput"></ion-input>
+        <ion-label color="light">Age</ion-label>
+        <ion-input id="ageInput" color="light"></ion-input>
     </ion-item>
 
     <ion-item>
-        <ion-label>Ville</ion-label>
-        <ion-input id="villeInput"></ion-input>
+        <ion-label color="light">Ville</ion-label>
+        <ion-input id="villeInput" color="light"></ion-input>
     </ion-item>
 
     <ion-item>
-        <ion-label>Métier</ion-label>
-        <ion-input id="metierInput"></ion-input>
+        <ion-label color="light">Métier</ion-label>
+        <ion-input id="metierInput" color="light"></ion-input>
     </ion-item>
 
     <ion-item>
-        <ion-label>Bio</ion-label>
-        <ion-input id="bioInput"></ion-input>
+        <ion-label color="light">Bio</ion-label>
+        <ion-input id="bioInput" color="light"></ion-input>
     </ion-item>
 
 
-    <ion-button (click)="sauvegarderClicked()">Sauvegarder</ion-button>
+ <!--  <ion-button (click)="sauvegarderClicked()">Sauvegarder</ion-button>--> 
 
-    <div id="result"></div>
-</ion-list>
-<div id="result"></div>
+   <!--   <div id="result"></div>--> 
+   </ion-list>
+ <!--  div id="result"></div>
 
-<div id="result" style="border: 1px solid red;"></div>
+<div id="result" style="border: 1px solid red;"></div>--> 
 
 
 
