--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -1,6 +1,6 @@
 .header {
     height: 180px;
-    background-color: #03A9F4;
+    --ion-background-color: linear-gradient(#6d19f5, #050c44);  
     width: 100%;
     padding-top: 1px;
 }
@@ -56,3 +56,25 @@
     justify-content: center;
     margin-top: -76px;
 }
+
+.menu-with-green-background {
+
+    --ion-background-color: linear-gradient(#6d19f5, #050c44);  
+}
+
+ion-toolbar {
+
+    --background: url('../../assets/photo/colorviolet.jpg') 
+}
+  
+logo-header ion-toolbar {
+    text-align: center; /* Centre le contenu horizontalement */
+}
+  
+.logo {
+    width: 100px; /* Largeur souhaitée en pixels */
+    height: auto; /* Laissez "auto" pour maintenir la proportion d'origine */
+    margin: 0 auto; /* Centre le logo horizontalement en utilisant des marges automatiques */
+}
+  
+  
