presentation oral one

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -9,56 +9,31 @@
     <ion-list [inset]="true">
       <ion-item>
         <ion-thumbnail slot="start">
-          <img src='assets/photo/tof13.jpg'>
+          <img src='assets/photo/apple.png'>
         </ion-thumbnail>
-        <ion-label>Cedric</ion-label>
+        <ion-label color="light">Apple</ion-label>
         <ion-badge slot="end">22</ion-badge>
       </ion-item>
       <ion-item>
         <ion-thumbnail slot="start">
-          <img src='assets/photo/tof12.jpg'>
+          <img src='assets/photo/Tesla.jpg'>
         </ion-thumbnail>
-        <ion-label>Megan</ion-label>
+        <ion-label color="light">Tesle</ion-label>
       </ion-item>
       <ion-item>
         <ion-thumbnail slot="start">
-          <img src='assets/photo/tof14.jpg'>
+          <img src='assets/photo/ttp.jpg'>
         </ion-thumbnail>
-        <ion-label>Eric</ion-label>
+        <ion-label color="light">pc tech</ion-label>
         <ion-badge slot="end">22</ion-badge>
       </ion-item>
       <ion-item>
         <ion-thumbnail slot="start">
-          <img src='assets/photo/tof15.jpg'>
+          <img src='assets/photo/logoetp.jpg'>
         </ion-thumbnail>
-        <ion-label>Céline</ion-label>
+        <ion-label color="light">entretech</ion-label>
       </ion-item>
-      <ion-item>
-        <ion-thumbnail slot="start">
-          <img src='assets/photo/tof13.jpg'>
-        </ion-thumbnail>
-        <ion-label>Cedric</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-thumbnail slot="start">
-          <img src='assets/photo/tof12.jpg'>
-        </ion-thumbnail>
-        <ion-label>Megan</ion-label>
-        <ion-badge slot="end">22</ion-badge>
-      </ion-item>
-      <ion-item>
-        <ion-thumbnail slot="start">
-          <img src='assets/photo/tof14.jpg'>
-        </ion-thumbnail>
-        <ion-label>Eric</ion-label>
-        <ion-badge slot="end">22</ion-badge>
-      </ion-item>
-      <ion-item>
-        <ion-thumbnail slot="start">
-          <img src='assets/photo/tof15.jpg'>
-        </ion-thumbnail>
-        <ion-label>Céline</ion-label>
-      </ion-item>
+      
 
     </ion-list>
 
